Change Sender to subject in form and show actions

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Sender:</strong>
-  <%= @message.sender %>
+  <strong>Subject:</strong>
+  <%= @message.subject %>
 </p>
 
 <p>
