--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :sender %>
-    <%= form.text_field :sender %>
+    <%= form.label :subject %>
+    <%= form.text_field :subject %>
   </div>
 
   <div class="field">
