Add sender field, db column update controller and mailer

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -17,9 +17,15 @@
   </div>
 
   <div class="field">
-    <%= form.label :receiver %>
-    <%= form.text_field :receiver %>
+    <%= form.label :sender %>
+    <%= form.text_field :sender, placeholder: "From:" %>
   </div>
+  
+  <div class="field">
+    <%= form.label :receiver %>
+    <%= form.text_field :receiver, placeholder: "To:" %>
+  </div>
+
 
   <div class="field">
     <%= form.label :body %>
