Style form and make it responsive, style left and right of form, make success screen, make fade effect for notice and style notice

--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,38 +1,37 @@
-<%= form_for(@message, local: true) do |form| %>
-  <% if message.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
+<div class="message-form-holder column">
+  <h1><%= title %></h1>
+  <%= form_for(@message, local: true) do |form| %>
+    <% if message.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
 
-      <ul>
-        <% message.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% message.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.text_field  :subject, type: "text",placeholder: "Subject" %>
+    </div>
+
+    <div class="field">
+      <%= form.text_field :sender, type: "email", placeholder: "From:" %>
+    </div>
+    
+    <div class="field">
+      <%= form.text_field :receiver, type: "email", placeholder: "To:" %>
+    </div>
+
+
+    <div class="field">
+      <%= form.text_area :body, type: "text", placeholder: "Your message", rows: "10" %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :subject %>
-    <%= form.text_field :subject %>
-  </div>
-
-  <div class="field">
-    <%= form.label :sender %>
-    <%= form.text_field :sender, placeholder: "From:" %>
-  </div>
-  
-  <div class="field">
-    <%= form.label :receiver %>
-    <%= form.text_field :receiver, placeholder: "To:" %>
-  </div>
-
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
