--- a/app/views/send_message_mailer/send_message.html.erb
+++ b/app/views/send_message_mailer/send_message.html.erb
@@ -1,26 +1,4 @@
 <h2><%= @message.subject%></h2>
-  <p>
-    Dear Esther,
-  </p>
-  <p>
-    Attached below is a copy of the request for a change of CDS day as requested.
-  </p>
-  <br>
-  <p>
-    https://drive.google.com/file/d/1-biCsP0QCRKcScpPqTGMuakWBaLFmohY/view?usp=sharing_eip&ts=5e3400fc
-  </p>
-  <br>
-  <p>
-    All things concerning your NYSC should be addressed to me.
-  </p>
-  <br>
-  <br>
-  <p>
-    Signed
-  </p>
-  <p>
-    Chioma Okoye Jonathan
-  </p>
-  <p>
-    Human Resources/Administrative Assistant
-  </p>
+<pre>
+  <%= @message.body%>
+</pre>
