--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Message</h1>
+<div class="page-holder row">
+  <div class="left">
+  </div>
+  <div class="column right">
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
 
-<%= render 'form', message: @message %>
+    <%= render 'form', message: @message, title: "Send an Email" %>
+  </div>
 
-<%= link_to 'Back', messages_path %>
+</div>
+
+
