--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-holder row">
   <div class="left">
   </div>
-  <div class="column right">
+  <div class="column right" style="background-image: url(<%= image_url('form_bg.svg')%>)">
     <% if notice %>
       <p class="notice"><%= notice %></p>
     <% end %>
