--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -17,7 +17,7 @@
     background-repeat: no-repeat;
     display: none;
 
-    @media #{$medium-mq} {
+    @media #{$large-mq} {
       display: block;
     }
   }
@@ -33,7 +33,7 @@
     background-size: cover;
     text-align: center;
     
-    @media #{$medium-mq} {
+    @media #{$large-mq} {
       width: 50%;
       background-position: bottom;
     }
