Move illustration to the top, style show page responsively, add logo

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand|Zhi+Mang+Xing&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sigmar+One|Quicksand&display=swap');
 
 // Breakpoints
 $small-bp: 321px;
@@ -14,7 +14,7 @@ $large-mq: "(min-width: #{$large-bp})";
 $xlarge-mq: "(min-width: #{$xlarge-bp})";
 
 // Fonts
-$primary-font: 'Zhi Mang Xing', cursive;
+$primary-font: 'Sigmar One', cursive;
 $secondary-font: 'Quicksand', sans-serif;
 
 // Colors
