--- a/app/views/messages/success.html.erb
+++ b/app/views/messages/success.html.erb
@@ -7,7 +7,7 @@
     <% end %>
 
     <div class="message-holder column">
-      <h1>Your Message is on the way!</h1>
+      <h1>It's on the way!</h1>
       <%= link_to 'Send another', root_path, class: 'action-btn new-btn' %> 
       <%= link_to  "View Message", message_path(@message), class: 'action-btn view-btn' %>
     </div>
