--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,22 +1,28 @@
-<p> 
-        <strong>Subject:</strong>
-        <%= @message.subject %>
-      </p>
+<div class="message-holder column">
+  <h1>Your message</h1>
+  <div class="column">
+    <p> 
+      <strong>Subject:</strong>
+      <%= @message.subject %>
+    </p>
 
+    <p>
+      <strong>Your Email:</strong>
+      <%= @message.sender %>
+    </p>
 
+    <p>
+      <strong>To:</strong>
+      <%= @message.receiver %>
+    </p>
+
+    <div class="message-container">
+      <strong>Message:</strong>
       <p>
-        <strong>Your Email:</strong>
-        <%= @message.sender %>
+        <%= @message.body %>
       </p>
+    </div>
 
-      <p>
-        <strong>To:</strong>
-        <%= @message.receiver %>
-      </p>
-
-      <p>
-        <strong>Message:</strong>
-        <pre>
-          <%= @message.body %>
-        </pre>
-      </p>
+    <%= link_to  "New Message", root_path, class: 'action-btn new-btn' %>
+  </div>
+</div>
