--- a/app/views/send_message_mailer/send_message.html.erb
+++ b/app/views/send_message_mailer/send_message.html.erb
@@ -1,4 +1,6 @@
 <h2><%= @message.subject%></h2>
-<pre>
-  <%= @message.body%>
-</pre>
+<div class="message-container">
+  <p class="email-body">
+    <%= @message.body%>
+  </p>
+</div>
