--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -5,11 +5,16 @@
   align-items: center;
   height: 100vh;
   width: 100%;
+
+  h3 {
+    color: $primary-blue;
+    margin-top: 1em;
+  }
   
   .column {
-    align-items: center;
+    align-items: flex-start;
     width: 90%;
-    font-size: 1.6em;
+    font-size: .8em;
     
     @media #{$medium-mq} {
       width: 80%;
@@ -17,6 +22,10 @@
     }
 
     @media #{$large-mq} {
+      width: 70%;
+    }
+
+    @media #{$xlarge-mq} {
       width: 50%;
     }
   }
@@ -54,6 +63,10 @@
 
   .message-container {
     width: 90%;
+    height: 25vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    margin-bottom: 2em;
 
     p {
       white-space: pre-wrap;
