Wrap email body in pre tags

--- a/app/views/send_message_mailer/send_message.html.erb
+++ b/app/views/send_message_mailer/send_message.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @message.subject%></h2>
 <div class="message-container">
-  <p class="email-body">
+  <pre class="email-body">
     <%= @message.body%>
-  </p>
+  </pre>
 </div>
