--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+  <% if flash[:notice] %>
+    <p class="notice"><%= flash.notice %></p>
+  <% end %>
+
     <h2 class="logo">MailGuy</h2>
     <%= yield %>
   </body>
