Handle deleted message to show up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
   <% if flash[:deleted] %>
-    <p class="notice"><%= flash.notice %></p>
+    <p class="notice"><%= flash.deleted %></p>
   <% end %>
 
     <h2 class="logo">MailGuy</h2>
