Display error when message has been deleted

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -2,8 +2,8 @@
   <div class="left">
   </div>
   <div class="column right" style="background-image: url(<%= image_url('form_bg.svg')%>)">
-    <% if notice %>
-      <p class="notice"><%= notice %></p>
+    <% if flash[:message] %>
+      <p class="notice"><%= flash[:message] %></p>
     <% end %>
 
     <%= render 'form', message: @message, title: "Send an Email" %>
